# api

./: Cargo.toml  flake.nix  shell.nix
api/: Cargo.toml  run-dev-server.nix
api/dev/: ca-csr.json  ca-key.pem  ca.csr  ca.pem  server-key.pem  server.csr  server.json  server.pem
api/src/: main.rs
docs/: design.md  goals.md
proto/: nixek.proto
protogen/: Cargo.toml  build.rs
protogen/src/: lib.rs
