[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.4.3", features = ["tls", "transport", "codegen", "prost"] }
protogen = { path = "../protogen" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
tokio-postgres = "0.7"
